--- a/src/main/resources/templates/new_student.html
+++ b/src/main/resources/templates/new_student.html
@@ -4,93 +4,58 @@
     <div th:replace="fragments/head :: headPart"></div>
 </head>
 <body>
-    <div th:replace="fragments/nav :: navbar"></div>
-    <div class="container">
-        <br>
-        <h2>Register Student</h2>
-        <form th:action="@{/addStudent}" th:object="${studentForm}" method="POST">
+<div th:replace="fragments/nav :: navbar"></div>
+<div class="container">
+    <br>
+    <h2>Register Student</h2>
+    <form th:action="@{/addStudent}" th:object="${studentForm}" method="POST">
 
-                <input type="text" th:field="*{firstName}" placeholder="Your first name" class="form-control mb-4 col-4"/>
-                <div th:fragment="validation-error">
-                    <div  th:if="${#fields.hasErrors('firstName')}" class="alert alert-warning" th:errors="*{firstName}"></div>
-                </div>
+        <input type="text" th:field="*{firstName}" placeholder="Your first name" class="form-control mb-4 col-4"/>
+        <div th:fragment="validation-error">
+            <div th:if="${#fields.hasErrors('firstName')}" class="alert alert-warning" th:errors="*{firstName}"></div>
+        </div>
 
-                <input type="text" th:field="*{middleName}" placeholder="Your middle name" class="form-control mb-4 col-4"/>
+        <input type="text" th:field="*{middleName}" placeholder="Your middle name" class="form-control mb-4 col-4"/>
 
-                <input type="text" th:field="*{lastName}" placeholder="Your last name" class="form-control mb-4 col-4" step="0.01"/>
-                <div th:fragment="validation-error">
-                    <div  th:if="${#fields.hasErrors('lastName')}" class="alert alert-warning" th:errors="*{lastName}"></div>
-                </div>
+        <input type="text" th:field="*{lastName}" placeholder="Your last name" class="form-control mb-4 col-4"
+               step="0.01"/>
+        <div th:fragment="validation-error">
+            <div th:if="${#fields.hasErrors('lastName')}" class="alert alert-warning" th:errors="*{lastName}"></div>
+        </div>
 
-                <input type="text" th:field="*{pesel}" placeholder="Your pesel" class="form-control mb-4 col-4"/>
-                <div th:fragment="validation-error">
-                    <div  th:if="${#fields.hasErrors('pesel')}" class="alert alert-warning" th:errors="*{pesel}"></div>
-                </div>
+        <input type="text" th:field="*{pesel}" placeholder="Your pesel" class="form-control mb-4 col-4"/>
+        <div th:fragment="validation-error">
+            <div th:if="${#fields.hasErrors('pesel')}" class="alert alert-warning" th:errors="*{pesel}"></div>
+        </div>
 
-                <input type="date" th:field="*{dob}" placeholder="Your date of birth" class="form-control mb-4 col-4"/>
-                <div th:fragment="validation-error">
-                    <div  th:if="${#fields.hasErrors('dob')}" class="alert alert-warning" th:errors="*{dob}"></div>
-                </div>
+        <input type="date" th:field="*{dob}" placeholder="Your date of birth" class="form-control mb-4 col-4"/>
+        <div th:fragment="validation-error">
+            <div th:if="${#fields.hasErrors('dob')}" class="alert alert-warning" th:errors="*{dob}"></div>
+        </div>
 
-            <div th:object="${addressForm}">
-                <table>
-                    <thead>
-                    <tr>
-                        <th> City</th>
-                        <th> Street</th>
-                        <th> House number</th>
-                        <th> Postal Code</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr th:each="address, itemStat : *{addressList}">
-                        <td><input th:field="*{addressList[__${itemStat.index}__].city}" /></td>
-                        <td><input th:field="*{addressList[__${itemStat.index}__].street}" /></td>
-                        <td><input th:field="*{addressList[__${itemStat.index}__].houseNr}" /></td>
-                        <td><input th:field="*{addressList[__${itemStat.index}__].postalCode}" /></td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
+        <div th:object="${addressForm}">
+            <table>
+                <thead>
+                <tr>
+                    <th>City</th>
+                    <th>Street</th>
+                    <th>House number</th>
+                    <th>Postal Code</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="address, itemStat : *{addressList}">
+                    <td><input th:field="*{addressList[__${itemStat.index}__].city}"/></td>
+                    <td><input th:field="*{addressList[__${itemStat.index}__].street}"/></td>
+                    <td><input th:field="*{addressList[__${itemStat.index}__].houseNr}"/></td>
+                    <td><input th:field="*{addressList[__${itemStat.index}__].postalCode}"/></td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+        <button type="submit" class="btn btn-info col-1">Register</button>
+    </form>
 
-<!--                <div th:object="${addressForm}">-->
-<!--                <p>Residential Address</p>-->
-<!--                    <div th:replace="fragments/addAddress :: addAddressPart"></div>-->
-<!--                </div>-->
-
-<!--                <div th:object="${addressForm2}">-->
-<!--                <p>Permanent Address</p>-->
-<!--                    <div th:replace="fragments/addAddress :: addAddressPart"></div>-->
-<!--                </div>-->
-
-<!--                <p>Correspondence Address</p>-->
-<!--                <div th:object="${addressForm3}">-->
-<!--                    <div th:replace="fragments/addAddress :: addAddressPart"></div>-->
-<!--                </div>-->
-            <button type="submit" class="btn btn-info col-1">Register</button>
-        </form>
-
-    </div>
+</div>
 </body>
 </html>
-
-<!--            <fieldset>-->
-<!--                <table>-->
-<!--                    <thead>-->
-<!--                    <tr>-->
-<!--                        <th>City</th>-->
-<!--                        <th>Street</th>-->
-<!--                        <th>House number</th>-->
-<!--                        <th>Postal code</th>-->
-<!--                    </tr>-->
-<!--                    </thead>-->
-<!--                    <tbody>-->
-<!--                    <tr th:each="address : ${addressForm}">-->
-<!--                        <td th:text="${address.street}"/>-->
-<!--                        <td th:text="${address.city}"/>-->
-<!--                        <td th:text="${address.houseNr}"/>-->
-<!--                        <td th:text="${address.postalCode}"/>-->
-<!--                    </tr>-->
-<!--                    </tbody>-->
-<!--                </table>-->
-<!--            </fieldset>-->
