adding SortBy_firstName/lastName/Age buttons

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,5 +24,12 @@
     </tbody>
 
 </table>
+
+<span>
+    <a th:href="@{/sortByFirstName}" class="btn btn-primary"> Sort by first name</a>
+    <a th:href="@{/sortByLastName}" class="btn btn-primary"> Sort by last name</a>
+    <a th:href="@{/sortByAge}" class="btn btn-primary"> Sort by age</a>
+</span>
+
 </body>
 </html>
