--- a/src/main/resources/templates/new_student.html
+++ b/src/main/resources/templates/new_student.html
@@ -8,50 +8,68 @@
 <div class="container">
     <br>
     <h2>Register Student</h2>
-    <form th:action="@{/addStudent}" th:object="${studentForm}" method="POST">
+    <br>
+    <h4>Your identity:</h4>
+    <br>
+    <form th:action="@{/addStudent}" th:object="${studentDTOForm}" method="POST">
 
-        <input type="text" th:field="*{firstName}" placeholder="Your first name" class="form-control mb-4 col-4"/>
+        <label>Your first name:</label>
+        <input type="text" th:field="*{firstName}" name="firstName"
+               class="form-control mb-4 col-4"/>
         <div th:fragment="validation-error">
             <div th:if="${#fields.hasErrors('firstName')}" class="alert alert-warning" th:errors="*{firstName}"></div>
         </div>
 
-        <input type="text" th:field="*{middleName}" placeholder="Your middle name" class="form-control mb-4 col-4"/>
+        <label>Your middle name (not required):</label>
+        <input type="text" th:field="*{middleName}" name="middleName" class="form-control mb-4 col-4"/>
+        <div th:fragment="validation-error">
+            <div th:if="${#fields.hasErrors('middleName')}" class="alert alert-warning" th:errors="*{middleName}"></div>
+        </div>
 
-        <input type="text" th:field="*{lastName}" placeholder="Your last name" class="form-control mb-4 col-4"
-               step="0.01"/>
+        <label>Your last name:</label>
+        <input type="text" th:field="*{lastName}" name="lastName" class="form-control mb-4 col-4"/>
         <div th:fragment="validation-error">
             <div th:if="${#fields.hasErrors('lastName')}" class="alert alert-warning" th:errors="*{lastName}"></div>
         </div>
 
-        <input type="text" th:field="*{pesel}" placeholder="Your pesel" class="form-control mb-4 col-4"/>
+        <label>Your pesel:</label>
+        <input type="text" th:field="*{pesel}" name="pesel" class="form-control mb-4 col-4"/>
         <div th:fragment="validation-error">
             <div th:if="${#fields.hasErrors('pesel')}" class="alert alert-warning" th:errors="*{pesel}"></div>
         </div>
 
-        <input type="date" th:field="*{dob}" placeholder="Your date of birth" class="form-control mb-4 col-4"/>
+        <label>Date of your birth:</label>
+        <input type="date" th:field="*{dob}" name="dob" class="form-control mb-4 col-4"/>
         <div th:fragment="validation-error">
             <div th:if="${#fields.hasErrors('dob')}" class="alert alert-warning" th:errors="*{dob}"></div>
         </div>
 
-        <div th:object="${addressForm}">
-            <table>
-                <thead>
-                <tr>
-                    <th>City</th>
-                    <th>Street</th>
-                    <th>House number</th>
-                    <th>Postal Code</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr th:each="address, itemStat : *{addressList}">
-                    <td><input th:field="*{addressList[__${itemStat.index}__].city}"/></td>
-                    <td><input th:field="*{addressList[__${itemStat.index}__].street}"/></td>
-                    <td><input th:field="*{addressList[__${itemStat.index}__].houseNr}"/></td>
-                    <td><input th:field="*{addressList[__${itemStat.index}__].postalCode}"/></td>
-                </tr>
-                </tbody>
-            </table>
+        <div th:fragment="validation-error">
+            <div th:if="${#fields.hasErrors('pesel')}" class="alert alert-warning" th:errors="*{pesel}"></div>
+        </div>
+
+
+        <br>
+        <h4>Your addresses (permanent/residential/correspondence):</h4>
+
+        <div th:object="${addressListForm}">
+            <tr th:each="addressCreationDTO, itemStat : *{addressDTOList}">
+                <br>
+                <label>City</label>
+                <input th:field="*{addressDTOList[__${itemStat.index}__].city}" class="form-control mb-4 col-4"/>
+
+                <label>Street</label>
+                <input th:field="*{addressDTOList[__${itemStat.index}__].street}" class="form-control mb-4 col-4"/>
+
+                <label>House number</label>
+                <input th:field="*{addressDTOList[__${itemStat.index}__].houseNr}" class="form-control mb-4 col-4"/>
+
+                <label>Postal code</label>
+                <input th:field="*{addressDTOList[__${itemStat.index}__].postalCode}" class="form-control mb-4 col-4"/>
+
+                <div th:if="${#fields.hasAnyErrors()}" class="alert alert-warning">
+                    <span>Please, provide all required Addresses attributes.</span>
+                </div>
         </div>
         <button type="submit" class="btn btn-info col-1">Register</button>
     </form>
