--- a/src/main/resources/templates/new_student.html
+++ b/src/main/resources/templates/new_student.html
@@ -36,12 +36,14 @@
         <input type="text" th:field="*{pesel}" name="pesel" class="form-control mb-4 col-4"/>
         <div th:fragment="validation-error">
             <div th:if="${#fields.hasErrors('pesel')}" class="alert alert-warning" th:errors="*{pesel}"></div>
+            <div th:if="${peselDateExc}" th:text="${peselDateExc}" class="alert alert-warning"></div>
         </div>
 
         <label>Date of your birth:</label>
         <input type="date" th:field="*{dob}" name="dob" class="form-control mb-4 col-4"/>
         <div th:fragment="validation-error">
             <div th:if="${#fields.hasErrors('dob')}" class="alert alert-warning" th:errors="*{dob}"></div>
+            <div th:if="${youthExc}" th:text="${youthExc}"  class="alert alert-warning"></div>
         </div>
 
         <br>
