--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,7 +28,7 @@
             <td th:text="${students.dob}"></td>
             <td th:text="${students.pesel}"></td>
             <td><a th:href="@{'/student/' + ${students.id} + '/addresses'}" class="btn btn-success">Addresses</a></td>
-            <!--            <td><a th:href="@{'/deleteStudent/' + ${students.id}}" class="btn btn-danger">Delete student</a></td>-->
+            <td><a th:href="@{'/updateStudent/' + ${students.id}}" class="btn btn-warning">Update</a></td>
         </tr>
         </tbody>
     </table>
