--- a/src/main/resources/templates/student_addresses.html
+++ b/src/main/resources/templates/student_addresses.html
@@ -25,7 +25,7 @@
                 <td th:text="${address.houseNr}"></td>
                 <td th:text="${address.postalCode}"></td>
                 <td th:text="${address.type}"></td>
-                <td><a th:href="@{'/student/deleteAddress/' + ${address.id}}" class="btn btn-danger">Delete address</a></td>
+<!--                <td><a th:href="@{'/student/deleteAddress/' + ${address.id}}" class="btn btn-danger">Delete address</a></td>-->
             </tr>
         </tbody>
     </table>
