changing bean creation from @Autowired into Constructor parameters

--- a/src/main/resources/templates/new_student.html
+++ b/src/main/resources/templates/new_student.html
@@ -11,7 +11,7 @@
     <br>
     <h4>Your identities:</h4>
     <br>
-    <form th:action="@{/addStudent}" th:object="${studentDTOForm}" method="POST">
+    <form th:action="@{/student/addStudent}" th:object="${studentDTOForm}" method="POST">
 
         <label>Your first name:</label>
         <input type="text" th:field="*{firstName}" name="firstName"
