--- a/src/main/resources/templates/student_addresses.html
+++ b/src/main/resources/templates/student_addresses.html
@@ -29,6 +29,7 @@
             </tr>
         </tbody>
     </table>
+                <a th:href="@{'/student/addresses/' + ${id} + '/update'}">Update</a>
 </div>
 </body>
 </html>
