--- a/src/main/resources/templates/update_student.html
+++ b/src/main/resources/templates/update_student.html
@@ -33,7 +33,7 @@
         </div>
 
         <label>Your pesel:</label>
-        <input type="text" th:field="*{pesel}" name="pesel" class="form-control mb-4 col-4"/>
+        <input type="number" th:field="*{pesel}" name="pesel" class="form-control mb-4 col-4"/>
         <div th:fragment="validation-error">
             <div th:if="${#fields.hasErrors('pesel')}" class="alert alert-warning" th:errors="*{pesel}"></div>
             <div th:if="${peselDateExc}" th:text="${peselDateExc}" class="alert alert-warning"></div>
@@ -45,36 +45,37 @@
             <div th:if="${#fields.hasErrors('dob')}" class="alert alert-warning" th:errors="*{dob}"></div>
             <div th:if="${youthExc}" th:text="${youthExc}"  class="alert alert-warning"></div>
         </div>
-
-        <br>
-        <h4>Your addresses (permanent/residential/correspondence):</h4>
-
-        <div th:object="${addressListForm}">
-            <tr th:each="addressCreationDTO, itemStat : *{addressDTOList}">
-                <br>
-                <label>City</label>
-                <input th:field="*{addressDTOList[__${itemStat.index}__].city}" class="form-control mb-4 col-4"/>
-                <div th:if="${#fields.hasErrors('addressDTOList[__${itemStat.index}__].city')}" class="alert alert-warning"
-                     th:errors="*{addressDTOList[__${itemStat.index}__].city}"></div>
-
-                <label>Street</label>
-                <input th:field="*{addressDTOList[__${itemStat.index}__].street}" class="form-control mb-4 col-4"/>
-                <div th:if="${#fields.hasErrors('addressDTOList[__${itemStat.index}__].street')}" class="alert alert-warning"
-                     th:errors="*{addressDTOList[__${itemStat.index}__].street}"></div>
-
-                <label>House number</label>
-                <input th:field="*{addressDTOList[__${itemStat.index}__].houseNr}" class="form-control mb-4 col-4"/>
-                <div th:if="${#fields.hasErrors('addressDTOList[__${itemStat.index}__].houseNr')}" class="alert alert-warning"
-                     th:errors="*{addressDTOList[__${itemStat.index}__].houseNr}"></div>
-
-                <label>Postal code</label>
-                <input th:field="*{addressDTOList[__${itemStat.index}__].postalCode}" class="form-control mb-4 col-4"/>
-                <div th:if="${#fields.hasErrors('addressDTOList[__${itemStat.index}__].postalCode')}" class="alert alert-warning"
-                     th:errors="*{addressDTOList[__${itemStat.index}__].postalCode}"></div>
-            </tr>
-        </div>
-        <button type="submit" class="btn btn-info col-1">Register</button>
+        <button type="submit" class="btn btn-info col-1">Update</button>
     </form>
 </div>
 </body>
 </html>
+
+
+<!--        <br>-->
+<!--        <h4>Your addresses (permanent/residential/correspondence):</h4>-->
+
+<!--        <div th:object="${addressListForm}">-->
+<!--            <tr th:each="addressCreationDTO, itemStat : *{addressDTOList}">-->
+<!--                <br>-->
+<!--                <label>City</label>-->
+<!--                <input th:field="*{addressDTOList[__${itemStat.index}__].city}" class="form-control mb-4 col-4"/>-->
+<!--                <div th:if="${#fields.hasErrors('addressDTOList[__${itemStat.index}__].city')}" class="alert alert-warning"-->
+<!--                     th:errors="*{addressDTOList[__${itemStat.index}__].city}"></div>-->
+
+<!--                <label>Street</label>-->
+<!--                <input th:field="*{addressDTOList[__${itemStat.index}__].street}" class="form-control mb-4 col-4"/>-->
+<!--                <div th:if="${#fields.hasErrors('addressDTOList[__${itemStat.index}__].street')}" class="alert alert-warning"-->
+<!--                     th:errors="*{addressDTOList[__${itemStat.index}__].street}"></div>-->
+
+<!--                <label>House number</label>-->
+<!--                <input th:field="*{addressDTOList[__${itemStat.index}__].houseNr}" class="form-control mb-4 col-4"/>-->
+<!--                <div th:if="${#fields.hasErrors('addressDTOList[__${itemStat.index}__].houseNr')}" class="alert alert-warning"-->
+<!--                     th:errors="*{addressDTOList[__${itemStat.index}__].houseNr}"></div>-->
+
+<!--                <label>Postal code</label>-->
+<!--                <input th:field="*{addressDTOList[__${itemStat.index}__].postalCode}" class="form-control mb-4 col-4"/>-->
+<!--                <div th:if="${#fields.hasErrors('addressDTOList[__${itemStat.index}__].postalCode')}" class="alert alert-warning"-->
+<!--                     th:errors="*{addressDTOList[__${itemStat.index}__].postalCode}"></div>-->
+<!--            </tr>-->
+<!--        </div>-->
