--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,15 +29,33 @@
             <td th:text="${students.pesel}"></td>
             <td><a th:href="@{'/student/addresses/' + ${students.id}}" class="btn btn-success">Addresses</a></td>
             <td><a th:href="@{'/student/updateStudent/' + ${students.id}}" class="btn btn-warning">Update</a></td>
+            <td><a th:href="@{'/student/deleteStudent/' + ${students.id}}" class="btn btn-danger">Delete</a></td>
         </tr>
+            <tr th:each="students : ${studentsListPage}">
+                <td th:text="${students.firstName}"></td>
+                <td th:text="${students.middleName}"></td>
+                <td th:text="${students.lastName}"></td>
+                <td th:text="${students.dob}"></td>
+                <td th:text="${students.pesel}"></td>
+                <td><a th:href="@{'/student/addresses/' + ${students.id}}" class="btn btn-success">Addresses</a></td>
+                <td><a th:href="@{'/student/updateStudent/' + ${students.id}}" class="btn btn-warning">Update</a></td>
+                <td><a th:href="@{'/student/deleteStudent/' + ${students.id}}" class="btn btn-danger">Delete</a></td>
+            </tr>
         </tbody>
     </table>
+        <div>
+            Amount of students: [[${totalElements}]]. &nbsp; Page [[${currentPage}]] of [[${totalPages}]]. &nbsp;
+            <span th:each="pageNr: ${#numbers.sequence(1, totalPages)}">
+                <a th:href="@{${pageNr}}">[[${pageNr}]]</a> &nbsp;
+            </span>
+        </div>
     <br>
     <td><a th:href="@{/student/addStudent}" class="btn btn-primary">Add Student</a></td>
 
     <br><br><br>
 
     <form th:action="@{students/ageCount}" class="d-flex">
+
         <input name="studentsOfAge" class="form-control mb-4 col-4" type="number"
                placeholder="Find amount of students of age:" min="18" max="100" required/>
         <button class="btn btn-primary" type="submit">Search</button>
