updating sorting and paging

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,7 +29,7 @@
         </thead>
 
         <tbody>
-        <tr th:each="students : ${studentsListPage}">
+        <tr th:each="students : ${listPage}">
             <td th:text="${students.firstName}"></td>
             <td th:text="${students.middleName}"></td>
             <td th:text="${students.lastName}"></td>
